# docs/swagger.yaml
@@ -224,6 +224,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/github_com_simesaba80_toybox-back_internal_interface_schema.GetDiscordTokenResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
         "403":
           description: Forbidden
           schema:
